# Nuance

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  hello.py  mkdocs.yml  nuance.constitution  pyproject.toml  verified.csv.example
docs/: index.md  miners.md  validators.md
docs/dev/: class.md  data_flow.md  db_schema.md  overall_architecture.md  processing_flow.md  validator.md
examples/: Nuance_Signup.ipynb  Nuance_Signup_for_Totally_Newbie.ipynb  README.md  Simple_Miner_Setup_sn23_Nuance.ipynb  miner_submit.ipynb  miner_tips.ipynb  simple_submission.ipynb
neurons/: config.py
neurons/miner/: main.py  miner.py
neurons/validator/: api_server.py  main.py  main_1.py  scoring.py  validator.py
neurons/validator/api_server/: README.md  api_server.py  app.py  app_legacy.py  dependencies.py  models.py  rate_limiter.py  utils.py
neurons/validator/submission_server/: app.py  gossip.py  (+3 more)
nuance/: __init__.py  chain.py  constants.py  constitution.py  llm.py  models.py  settings.py  twitter.py  utils.py
nuance/database/: __init__.py  engine.py  query_service.py  schema.py
nuance/processing/: __init__.py  base.py  llm.py  nuance_check.py  pipeline.py  sentiment.py  topic_tagger.py
nuance/social/: __init__.py  content_provider.py
nuance/utils/: bittensor_utils.py  epistula.py  logging.py  networking.py
scripts/: run_validator.sh  update_social_data.py
tests/: main_score_aggregating_without_set_weights.py  test_consitution.py  test_score_aggregating.py  twitter_get_all_quotes.py  twitter_quote_to_interaction.py
(+16 files in other folders)
